--- a/resources/css/write.css
+++ b/resources/css/write.css
@@ -57,3 +57,9 @@
     align-self: flex-end;
     margin: 30rem 0 0;
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    padding: 0 30rem;
+  }
+}
